--- a/views/electricidad.ejs
+++ b/views/electricidad.ejs
@@ -13,7 +13,7 @@
       crossorigin="anonymous"
     />
     <!--==== STYLE.CSS ==== -->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/documentos.css" />
     <!--==== REMIXICON CDN ==== -->
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css"
@@ -58,6 +58,8 @@
     <br /><br />
     <h1>Seguridad en el trabajo con Tableros Eléctricos</h1>
     <br />
+    <img height="300px" src="images/tableros.jpg" alt="" />
+    <br /><br />
     <p>
       Los tableros eléctricos son equipos que concentran dispositivos de
       protección y de maniobra o comando, desde los cuales se puede proteger y
@@ -107,6 +109,7 @@
       manivelas. Para realizar reparaciones, debe bloquearse el paso de
       corriente.
     </p>
+    <br /><br />
     <h2>La Puesta a Tierra de la Instalación Eléctrica</h2>
     <p>
       Junto con las protecciones instaladas al Tablero General de Electricidad,
@@ -116,11 +119,15 @@
       amarillo). En términos generales, la normativa obliga a que todos los
       tomacorrientes de la Instalación estén conectados a tierra.
     </p>
+    <br /><br />
+    <img src="images/clas1.jpg" alt="" />
+    <br /><br />
     <p>
       El Tablero General sirve para administrar adecuadamente la energía al
       interior de la empresa y es el lugar donde se concentran los sistemas de
       protección que brindan seguridad al usuario.
     </p>
+    <br /><br />
     <h2>Sistemas de Protección</h2>
     <p>
       Los interruptores de protección permiten que, en caso de que se presente
@@ -147,6 +154,7 @@
       deberse a un aislamiento deteriorado y puede producirse a través de alguna
       persona, generándole un riesgo de muerte por electrocución.
     </p>
+    <br /><br />
     <h2>Uso de Tarjetas de Bloqueo en los Tableros Eléctricos</h2>
     <p>
       El procedimiento de Bloqueo y Tarjetas de Seguridad deberá ser usado para
@@ -167,6 +175,7 @@
       protección y de comandos, de modo que, una vez terminada la intervención,
       estos queden operando en la misma condición inicial.
     </p>
+    <br /><br />
     <h2>Instalación de Tarjetas</h2>
     <p>
       Antes de comenzar el trabajo, el operador debe instalar las tarjetas
@@ -181,48 +190,50 @@
       manipulación, certificando que el sistema fue desenergizado y no podrá ser
       puesto en marcha por ningún mecanismo.
     </p>
+    <img src="images/clas3.jpg" alt="" />
+    <br /><br />
     <h2>La energía eléctrica y el cuerpo humano</h2>
     <p>
       La gravedad de los efectos dañinos de un choque eléctrico en el cuerpo
       humano está determinada por los siguientes aspectos:
     </p>
-    <ul>
-      <li>
-        La intensidad de la corriente: La corriente eléctrica causa efectos
-        nocivos para el organismo humano. Se ha determinado que el límite de
-        intensidad peligrosa para una persona es de 25 miliamperios (mA).
-      </li>
-      <li>
-        Frecuencia de la corriente: La frecuencia es la causa de un gran número
-        de accidentes, ya que interfiere la frecuencia del ritmo cardiaco,
-        ocasionando la fibrilación del corazón (paro cardiaco). Es necesario
-        tener en cuenta que las frecuencias de la energía eléctrica comprendidas
-        entre 25 y 2000 cps (Hertz) ofrecen riesgo de fibrilación cardiaca muy
-        grande.
-      </li>
-      <li>La piel a la salida de la corriente.</li>
-      <li>Los tejidos y órganos internos.</li>
-      <li>
-        Estado anímico. Para la piel húmeda, la resistencia es de 100 a 500
-        ohmios en corrientes alternas y de unos 1800 ohmios en continua. En
-        tanto, para la piel seca, la resistencia varía de 100.000 a 600.000
-        ohmios, alcanzando hasta 1.000.000 ohmios. La resistencia interna
-        promedio del cuerpo aproximadamente es de 500 Ohms.
-      </li>
-      <li>
-        Trayecto de la corriente: El riesgo de fibrilación cardiaca (paro del
-        corazón) depende de las partes del cuerpo que entren en contacto con el
-        conductor o elemento energizado y de que el corazón sea alcanzado por la
-        corriente al atravesar el cuerpo. El trayecto más peligroso se presenta
-        cuando el circuito se realiza entre el brazo derecho y la pierna
-        izquierda, pero no se descartan los contactos entre brazo y brazo, brazo
-        y tórax, cabeza y piernas o directamente sobre el pecho.
-      </li>
-      <li>
-        Los recorridos de la corriente eléctrica por el cuerpo humano son los
-        siguientes:
-      </li>
-    </ul>
+
+    <li>
+      La intensidad de la corriente: La corriente eléctrica causa efectos
+      nocivos para el organismo humano. Se ha determinado que el límite de
+      intensidad peligrosa para una persona es de 25 miliamperios (mA).
+    </li>
+    <li>
+      Frecuencia de la corriente: La frecuencia es la causa de un gran número de
+      accidentes, ya que interfiere la frecuencia del ritmo cardiaco,
+      ocasionando la fibrilación del corazón (paro cardiaco). Es necesario tener
+      en cuenta que las frecuencias de la energía eléctrica comprendidas entre
+      25 y 2000 cps (Hertz) ofrecen riesgo de fibrilación cardiaca muy grande.
+    </li>
+    <li>La piel a la salida de la corriente.</li>
+    <li>Los tejidos y órganos internos.</li>
+    <li>
+      Estado anímico. Para la piel húmeda, la resistencia es de 100 a 500 ohmios
+      en corrientes alternas y de unos 1800 ohmios en continua. En tanto, para
+      la piel seca, la resistencia varía de 100.000 a 600.000 ohmios, alcanzando
+      hasta 1.000.000 ohmios. La resistencia interna promedio del cuerpo
+      aproximadamente es de 500 Ohms.
+    </li>
+    <li>
+      Trayecto de la corriente: El riesgo de fibrilación cardiaca (paro del
+      corazón) depende de las partes del cuerpo que entren en contacto con el
+      conductor o elemento energizado y de que el corazón sea alcanzado por la
+      corriente al atravesar el cuerpo. El trayecto más peligroso se presenta
+      cuando el circuito se realiza entre el brazo derecho y la pierna
+      izquierda, pero no se descartan los contactos entre brazo y brazo, brazo y
+      tórax, cabeza y piernas o directamente sobre el pecho.
+    </li>
+    <li>
+      Los recorridos de la corriente eléctrica por el cuerpo humano son los
+      siguientes:
+    </li>
+    <br />
+    <img src="images/clas4.jpg" alt="" />
 
     <footer></footer>
 
