--- a/views/generales.ejs
+++ b/views/generales.ejs
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Centinela</title>
+    <title>CETYS Educación Continua</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
       crossorigin="anonymous"
     />
     <!--==== STYLE.CSS ==== -->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/documentos.css" />
     <!--==== REMIXICON CDN ==== -->
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css"
@@ -26,7 +26,7 @@
     <!---==== HEADER ==== -->
     <header class="container header">
       <!--==== NAVBAR ==== -->
-      <h1><%= %></h1>
+
       <nav class="nav">
         <div class="logo">
           <h2>Centinela</h2>
@@ -40,13 +40,13 @@
               <a href="/" class="nav_menu_link">inicio</a>
             </li>
             <li class="nav_menu_item">
-              <a href="/carpinteria" class="nav_menu_link">carpinteria</a>
+              <a href="/cursos" class="nav_menu_link">cursos</a>
             </li>
             <li class="nav_menu_item">
-              <a href="/electricidad" class="nav_menu_link">electricidad</a>
+              <a href="/diplomados" class="nav_menu_link">diplomados</a>
             </li>
             <li class="nav_menu_item">
-              <a href="/metalurgia" class="nav_menu_link">metalurgia</a>
+              <a href="/contacto" class="nav_menu_link">contacto</a>
             </li>
           </ul>
         </div>
@@ -55,7 +55,87 @@
         </button>
       </nav>
     </header>
+    <br /><br />
+    <h1>Conceptos básicos de seguridad industrial</h1>
+    <br />
+    <img height="300px" src="images/trabajador.jpg" alt="" />
+    <br /><br />
+    <p>
+      Se denomina seguridad industrial al conjunto de normas obligatorias
+      establecidas para evitar o minimizar, tanto los riesgos que puedan
+      efectuarse en los ámbitos industriales, como los perjuicios derivados de
+      la actividad industrial e incluso las enfermedades ocupacionales. Dado que
+      por las maquinarias y las herramientas que se utilizan son áreas propensas
+      al peligro, mediante la prevención se busca evitar el daño a las personas,
+      a los bienes y reducir el impacto en el medio ambiente. La seguridad
+      industrial debe ser cumplida obligatoriamente en todas las empresas y la
+      principal finalidad del cumplimiento de estas disposiciones es brindar
+      seguridad al trabajador dentro del ámbito laboral.
+    </p>
+    <br />
+    <p>
+      Las empresas o industrias tienen la responsabilidad de generar condiciones
+      de trabajo que garanticen protección y seguridad a sus trabajadores; para
+      ello deben implementar una serie de normas y condiciones que reduzcan el
+      riesgo de sufrir un accidente laboral.
+    </p>
+    <br /><br />
+    <h2>Medidas de seguridad industrial indispensables en toda empresa:</h2>
+    <br />
+    <li>
+      Abastecimiento de protección personal: todo trabajador debe ser provisto
+      de indumentaria apta e indicada para realizar sus actividades laborales de
+      forma segura. De ser necesario debe proveerse un equipo de seguridad, como
+      por ejemplo arnés, mascaras, guantes, gafas de seguridad y todo aquello
+      que ayude a disminuir el riesgo de padecer accidentes laborales.
+    </li>
+    <li>
+      Garantizar un área de trabajo segura: un espacio de trabajo mal diseñado
+      puede ser un gran peligro para los trabajadores. Es imprescindible que los
+      centros de trabajo presenten salidas de emergencia accesibles, zonas de
+      paso amplias y libres de obstáculos para evitar embotellamiento, salidas
+      debidamente señalizadas, poseer un plan para casos de emergencia y tener
+      un sistema contra incendios; el área debe contar con una iluminación
+      adecuada, los pisos no deben ser irregulares ni resbaladizos, y las
+      maquinarias deben tener una distancia de separación suficiente para que
+      los trabajadores puedan realizar sus tareas cómodamente.
+    </li>
+    <li>
+      Brindar capacitación: es importante que los trabajadores reciban una
+      formación adecuada, en la cual puedan adquirir los conocimientos
+      necesarios, para desempeñar su labor de forma segura y competente; así
+      mismo, deben ser capacitados para utilizar los elementos de seguridad de
+      forma correcta.
+    </li>
+    <br />
+    <p>
+      Al invertir en seguridad industrial y reducir los riesgos laborales, las
+      empresas disminuyen los costos de operación y obtienen mas ganancias, al
+      mismo tiempo que protegen a sus empleados, maquinarias y recursos, dado
+      que:
+    </p>
+    <br />
 
+    <li>
+      Al no presentarse accidentes se reduce considerablemente el absentismo.
+    </li>
+    <li>
+      La jornada laboral no se ve interrumpida por accidentes o imprevistos.
+    </li>
+    <li>
+      Se crea un mejor ambiente laboral donde los trabajadores realizan sus
+      tareas más a gusto, mejorando la productividad y competitividad.
+    </li>
+    <li>
+      Se reducen los costos que generan los daños a los equipos, edificios y se
+      evitan los pagos de indemnización.
+    </li>
+    <br />
+    <p>
+      Aplicando las normas de seguridad industrial, a la vez que se protege la
+      vida e integridad del trabajador, se obtienen grandes ahorros financieros.
+    </p>
+    <br /><br />
     <footer></footer>
 
     <script
