--- a/views/login.ejs
+++ b/views/login.ejs
@@ -17,6 +17,7 @@
   </head>
 
   <body>
+    <h1><%= %></h1>
     <section class="main">
       <figure class="main__figure">
         <img src="images/3343892.png" class="main__img" />
@@ -48,7 +49,7 @@
           />
         </form>
 
-        <a href="registro.html">Registrate aqui</a>
+        <a href="/register">Registrate aqui</a>
 
         <p class="main__paragraph">O continue con</p>
 
