--- a/views/register.ejs
+++ b/views/register.ejs
@@ -79,7 +79,7 @@
           />
         </form>
 
-        <a href="login.html">Ya tienes una cuenta?</a>
+        <a href="/login">Ya tienes una cuenta?</a>
 
         <p class="main__paragraph">O continue con</p>
 
