--- a/views/metalurgia.ejs
+++ b/views/metalurgia.ejs
@@ -9,11 +9,11 @@
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
       crossorigin="anonymous"
     />
     <!--==== STYLE.CSS ==== -->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/documentos.css" />
     <!--==== REMIXICON CDN ==== -->
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css"
@@ -26,7 +26,7 @@
     <!---==== HEADER ==== -->
     <header class="container header">
       <!--==== NAVBAR ==== -->
-      <h1><%= %></h1>
+
       <nav class="nav">
         <div class="logo">
           <h2>Centinela</h2>
@@ -46,7 +46,7 @@
               <a href="/carpinteria" class="nav_menu_link">carpinteria</a>
             </li>
             <li class="nav_menu_item">
-              <a href="/electricidad" class="nav_menu_link">electricidad</a>
+              <a href="/metalurgia" class="nav_menu_link">metalurgia</a>
             </li>
           </ul>
         </div>
@@ -55,7 +55,108 @@
         </button>
       </nav>
     </header>
+    <br /><br />
+    <h1>Seguridad en el torno</h1>
 
+    <br />
+    <img height="300px" src="images/torno.jpg" alt="" />
+    <br />
+    <p>
+      Los riesgos más comunes asociados al trabajo en el torno son los
+      siguientes:
+    </p>
+    <br />
+    <li>
+      Proyección de partículas y fragmentos (virutas, fragmentos de pieza y/o
+      herramienta, etc.).
+    </li>
+    <li>
+      Atrapamiento por o entre objetos (carros, plato de garras, pieza,
+      engranajes, etc.).
+    </li>
+    <li>Golpes y cortes por objetos y herramientas.</li>
+    <li>Caída de piezas y/o materiales en su manipulación.</li>
+    <li>Caída de personas al mismo nivel (por resbalones, tropiezos, etc.).</li>
+    <li>Exposición a sustancias nocivas.</li>
+    <li>Emisión de vapores, polvo, gases.</li>
+    <li>Exposición a contactos eléctricos.</li>
+    <li>Ruido y/o vibraciones.</li>
+    <br />
+    <p>
+      Una vez detectados los riesgos, se deberán implantar las siguientes
+      medidas para trabajar de forma segura en el torno:
+    </p>
+    <br /><br />
+    <h2>
+      En cuanto a la ropa de trabajo, equipos de protección individual, etc.:
+    </h2>
+    <br />
+    <li>
+      Las mangas del buzo o de la bata terminarán en tejido elástico; en su
+      defecto, se deberán remangar por encima de los codos.
+    </li>
+    <li>Usar las gafas de seguridad.</li>
+    <li>Usar botas de seguridad con puntera reforzada.</li>
+    <li>
+      Utilización de gorro para las personas que tengan el pelo largo, quedando
+      prohibido el uso de corbatas, bufandas, pulseras, collares, anillos, etc.
+    </li>
+    <br /><br />
+    <h2>En cuanto al manejo del torno:</h2>
+    <br />
+    <li>
+      NUNCA dejar la llave del plato de garras en el plato después de haber
+      apretado una pieza.
+    </li>
+    <li>
+      La palanca de bloqueo de la torreta portaherramientas debe estar bien
+      apretada, así como los tornillos que sujetan la herramienta.
+    </li>
+    <li>
+      Todo resguardo de que disponga el torno debe estar colocado y fijado.
+    </li>
+    <li>
+      No manipular directamente la viruta con la mano. Utilizar siempre guantes,
+      ganchos, etc.
+    </li>
+    <li>
+      Es muy peligroso limpiar las roscas a mano, sobre todo, cuando se trata de
+      interiores de pequeño diámetro.
+    </li>
+    <li>No frenar el plato con la mano, y mucho menos cogiendo la pieza.</li>
+    <li>
+      Evitar realizar operaciones manuales como el limado, lijado, etc. con la
+      pieza girando.
+    </li>
+    <li>
+      No comprobar la aspereza de las superficies con la mano si la pieza esta
+      girando.
+    </li>
+    <li>Nunca engrasar un mecanismo en movimiento.</li>
+    <br /><br />
+    <h2>Cuidados generales:</h2>
+    <br />
+    <li>
+      El torno debe disponer de una seta de emergencia al alcance inmediato del
+      operario y de una pantalla de protección contra impactos tanto en el plato
+      de garras como en el delantal.
+    </li>
+    <li>
+      El circuito eléctrico del torno debe estar conectado a tierra, así como el
+      cuadro eléctrico al que esté conectado el torno debe disponer de un
+      interruptor diferencial.
+    </li>
+    <li>Parar siempre la máquina antes de tomar medidas.</li>
+    <li>
+      Mantener el puesto de trabajo limpio, para evitar resbalones con el
+      aceite, etc.
+    </li>
+    <li>No dejar que se acumule demasiada viruta en la bandeja inferior.</li>
+    <li>
+      Colocar y asegurar las tapas protectoras de la caja de velocidades en su
+      posición correcta.
+    </li>
+    <br />
     <footer></footer>
 
     <script
