Desfibrilador del proyecto

--- a/views/generales.ejs
+++ b/views/generales.ejs
@@ -37,16 +37,19 @@
           </button>
           <ul class="nav_menu_list">
             <li class="nav_menu_item">
-              <a href="/" class="nav_menu_link">inicio</a>
+              <a href="/cuenta" class="nav_menu_link">cuenta</a>
             </li>
             <li class="nav_menu_item">
-              <a href="/cursos" class="nav_menu_link">cursos</a>
+              <a href="/acercade" class="nav_menu_link">formularios</a>
             </li>
             <li class="nav_menu_item">
-              <a href="/diplomados" class="nav_menu_link">diplomados</a>
+              <a href="/servicios" class="nav_menu_link">servicios</a>
             </li>
             <li class="nav_menu_item">
               <a href="/contacto" class="nav_menu_link">contacto</a>
+            </li>
+            <li class="nav_menu_item">
+              <a href="/proyectos" class="nav_menu_link">proyectos</a>
             </li>
           </ul>
         </div>
