correccion de nav en secciones de wiki

--- a/views/carpinteria.ejs
+++ b/views/carpinteria.ejs
@@ -43,7 +43,7 @@
               <a href="/generales" class="nav_menu_link">generales</a>
             </li>
             <li class="nav_menu_item">
-              <a href="/carpinteria" class="nav_menu_link">carpinteria</a>
+              <a href="/electricidad" class="nav_menu_link">electricidad</a>
             </li>
             <li class="nav_menu_item">
               <a href="/metalurgia" class="nav_menu_link">metalurgia</a>
