--- a/views/generales.ejs
+++ b/views/generales.ejs
@@ -40,13 +40,13 @@
               <a href="/" class="nav_menu_link">inicio</a>
             </li>
             <li class="nav_menu_item">
-              <a href="/cursos" class="nav_menu_link">cursos</a>
+              <a href="/electricidad" class="nav_menu_link">electricidad</a>
             </li>
             <li class="nav_menu_item">
-              <a href="/diplomados" class="nav_menu_link">diplomados</a>
+              <a href="/carpinteria" class="nav_menu_link">carpinteria</a>
             </li>
             <li class="nav_menu_item">
-              <a href="/contacto" class="nav_menu_link">contacto</a>
+              <a href="/metalurgia" class="nav_menu_link">metalurgia</a>
             </li>
           </ul>
         </div>
