--- a/views/metalurgia.ejs
+++ b/views/metalurgia.ejs
@@ -46,7 +46,7 @@
               <a href="/carpinteria" class="nav_menu_link">carpinteria</a>
             </li>
             <li class="nav_menu_item">
-              <a href="/metalurgia" class="nav_menu_link">metalurgia</a>
+              <a href="/electricidad" class="nav_menu_link">electricidad</a>
             </li>
           </ul>
         </div>
