--- a/views/generales.ejs
+++ b/views/generales.ejs
@@ -37,6 +37,9 @@
           </button>
           <ul class="nav_menu_list">
             <li class="nav_menu_item">
+              <a href="/" class="nav_menu_link">inicio</a>
+            </li>
+            <li class="nav_menu_item">
               <a href="/metalurgia" class="nav_menu_link">metalurgia</a>
             </li>
             <li class="nav_menu_item">
