Fix: Se hicieron correciones acerca del nav

--- a/views/contacto.ejs
+++ b/views/contacto.ejs
@@ -44,6 +44,9 @@
             <li class="nav_menu_item">
               <a href="/servicios" class="nav_menu_link">servicios</a>
             </li>
+            <li class="nav_menu_item">
+              <a href="/contacto" class="nav_menu_link">contacto</a>
+            </li>
           </ul>
         </div>
         <button class="toggle_btn" id="toggle_btn">
