--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,6 +30,9 @@
           </button>
           <ul class="nav_menu_list">
             <li class="nav_menu_item">
+              <a href="/" class="nav_menu_link">Inicio</a>
+            </li>
+            <li class="nav_menu_item">
               <a href="/cuenta" class="nav_menu_link">cuenta</a>
             </li>
             <li class="nav_menu_item">
